--- a/src/app/tasks/tasks-add/tasks-add.component.html
+++ b/src/app/tasks/tasks-add/tasks-add.component.html
@@ -1,7 +1,23 @@
 <div class="form-group">
-  <input (keyup.enter)="onTaskAdd($event)"
-         [(ngModel)]="addTaskValue"
-         class="form-control"
-         placeholder="Add New Task"
-         type="text"/>
+  <div class="row">
+    <div class="col-xs-3 col-md-2">
+      <input [(ngModel)]="task.dueDate"
+             class="form-control"
+             placeholder="Due date"
+             type="date"/>
+    </div>
+    <div class="col-xs-7 col-md-8">
+      <input [(ngModel)]="task.name"
+             class="form-control"
+             placeholder="Add new task"
+             type="text"/>
+    </div>
+    <div class="col-xs-2 col-md-2">
+      <button (click)="addTask(task)"
+              class="btn btn-success btn-block">Add
+      </button>
+    </div>
+  </div>
+
+
 </div>
